# php-tree-visualizer

./: .gitignore  COMMENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPECIFICATION.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
api/: auth.php  bootstrap.php  trace.php  traces.php
api/internal/: config.php  response.php  session.php  storage.php  (+1 more)
crates/php-tree-viz-collector/: Cargo.toml
crates/php-tree-viz-collector/benches/: decode_batch.rs
crates/php-tree-viz-collector/src/: finalize.rs  lib.rs  main.rs  observability.rs  retention.rs  tracekey.rs  wire.rs
crates/php-tree-viz-collector/src/config/: error.rs  mod.rs  secret.rs
crates/php-tree-viz-collector/src/http/: auth.rs  content_type.rs  error.rs  health.rs  ingest.rs  logging.rs  mod.rs  router.rs  server.rs  storage.rs  tmp.rs
crates/php-tree-viz-collector/src/observability/: disk_usage.rs  subscriber.rs
crates/php-tree-viz-collector/src/storage/: aggregate.rs  error.rs  mod.rs  schema.rs
crates/php-tree-viz-collector/tests/: cli.rs  disk_usage.rs  http_skeleton.rs  observability.rs  sd_notify.rs
crates/php-tree-viz-collector/tests/fixtures/flat_calls/: batch-0001.msgpack
crates/php-tree-viz-collector/tests/support/: batch.rs  harness.rs  log_capture.rs  mod.rs
etc/: apache-example.conf  apache-validate.conf  apache-validate.conf.in  collector.toml.example  install-debian.sh  nginx-example.conf  nginx-validate.conf.in  php-tree-viz-collector.service.example  reset-data.sh
tools/: validate-proxy-configs.sh
viz/: index.html  login.html  trace.html
(+55 files in other folders)
