[package]
name = "php-tree-viz-collector"
version = "0.0.0"
edition = "2021"
publish = false
description = "Collector + ingester for the php-analyze PHP profiling extension."
license = "MIT"

[dependencies]
axum = "0.7"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "io-util"] }
toml = "0.8"
tower = "0.5"
