[package]
name = "php-tree-viz-collector"
version = "0.0.0"
edition = "2021"
publish = false
description = "Collector + ingester for the php-analyze PHP profiling extension."
license = "MIT"

[dependencies]
axum = "0.7"
http-body-util = "0.1"
rmp-serde = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "io-util", "sync"] }
toml = "0.8"
tower = "0.5"
